--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <div id="root"></div>
 
     <script type="text/babel">
-        // --- Pegaremos el código completo de nuestra App React aquí ---
+        // **FIX**: Destructure icons from the global `lucide-react` object for correct usage in JSX.
+        const { User, Shirt, Sparkles, Download, XCircle, Image: ImageIcon, Trash2 } = lucide-react;
 
         // Helper function to extract base64 data from a data URL
         const getBase64Data = (dataUrl) => {
@@ -60,7 +61,7 @@
                         <div className="relative">
                             <img src={preview} alt={title} className="w-full h-48 object-contain rounded-lg mx-auto p-2" />
                             <button onClick={(e) => { e.stopPropagation(); onClear(); }} className="absolute top-2 right-2 bg-gray-900/60 rounded-full text-white hover:text-red-400 transition-colors">
-                                <lucide-react.XCircle size={24} />
+                                <XCircle size={24} />
                             </button>
                         </div>
                     ) : (
@@ -78,7 +79,7 @@
             if (isLoading) {
                 return (
                     <div className="w-full h-full flex flex-col items-center justify-center bg-gray-900 rounded-xl p-8 text-center">
-                        <lucide-react.Sparkles className="w-16 h-16 text-indigo-400 animate-pulse" />
+                        <Sparkles className="w-16 h-16 text-indigo-400 animate-pulse" />
                         <p className="text-gray-300 mt-4 text-lg font-medium">Procesando...</p>
                         <p className="text-gray-500 mt-2">{statusMessage}</p>
                     </div>
@@ -87,7 +88,7 @@
             if (error) {
                 return (
                     <div className="w-full h-full flex flex-col items-center justify-center bg-red-900/20 border border-red-500 rounded-xl p-8 text-center">
-                        <lucide-react.XCircle className="w-16 h-16 text-red-400" />
+                        <XCircle className="w-16 h-16 text-red-400" />
                         <p className="text-red-300 mt-4 text-lg font-medium">¡Oops! Ocurrió un error.</p>
                         <p className="text-red-400 mt-2 text-sm">{error}</p>
                     </div>
@@ -96,7 +97,7 @@
             if (images.length === 0) {
                 return (
                     <div className="w-full h-full flex flex-col items-center justify-center bg-gray-800/50 border-2 border-dashed border-gray-700 rounded-xl p-8 text-center">
-                        <lucide-react.Image className="w-20 h-20 text-gray-600" />
+                        <ImageIcon className="w-20 h-20 text-gray-600" />
                         <p className="text-gray-400 mt-4 text-lg font-medium">Tu clonación de producto aparecerá aquí</p>
                         <p className="text-gray-500 mt-2">Completa los pasos a la izquierda para empezar.</p>
                     </div>
@@ -110,7 +111,7 @@
                             <div className="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-4 text-center">
                                 <p className="text-white font-bold text-lg mb-2">{img.formatName}</p>
                                 <a href={img.url} download={`diseno-clonado.png`} className="mt-2 px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-500 transition-colors flex items-center gap-2">
-                                    <lucide-react.Download size={16} /> Descargar
+                                    <Download size={16} /> Descargar
                                 </a>
                             </div>
                         </div>
@@ -208,13 +209,13 @@
                                         <ImageUploader 
                                             onImageUpload={setModelImage} onClear={() => setModelImage(null)}
                                             title="Sujeto (Modelo/Maniquí)" 
-                                            icon={<lucide-react.User size={48} className="text-gray-500" />} 
+                                            icon={<User size={48} className="text-gray-500" />} 
                                             preview={modelImage} />
                                         <div className="space-y-4">
                                             <ImageUploader 
                                                 onImageUpload={handleGarmentUpload} onClear={() => setGarmentImages([])}
                                                 title="Prenda" 
-                                                icon={<lucide-react.Shirt size={48} className="text-gray-500" />} 
+                                                icon={<Shirt size={48} className="text-gray-500" />} 
                                                 preview={garmentImages.length > 0 ? garmentImages[0].data : null} />
                                         </div>
                                     </div>
@@ -226,7 +227,7 @@
                                             Genera el Clon
                                         </h2>
                                         <button onClick={handleClearAll} className="flex items-center gap-2 text-gray-400 hover:text-white transition-colors mb-1">
-                                            <lucide-react.Trash2 size={16} /> Limpiar Todo
+                                            <Trash2 size={16} /> Limpiar Todo
                                         </button>
                                     </div>
                                     <p className="text-gray-400 ml-11 mb-4">Haz clic para iniciar la clonación a través del servidor seguro.</p>
@@ -234,7 +235,7 @@
                                         onClick={handleGenerate}
                                         disabled={isLoading || !modelImage || garmentImages.length === 0}
                                         className="w-full ml-11 flex items-center justify-center gap-3 bg-gradient-to-r from-teal-500 to-cyan-600 text-white font-bold py-4 px-6 rounded-lg hover:from-teal-600 hover:to-cyan-700 transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed transform hover:scale-105">
-                                        <lucide-react.Sparkles size={24} />
+                                        <Sparkles size={24} />
                                         {isLoading ? 'Clonando...' : 'Generar Imagen'}
                                     </button>
                                 </div>
